--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'io.projectreactor:reactor-test'
     implementation 'com.github.seancfoley:ipaddress:5.3.3'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.12.0'
+
 
 }
 
